--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <textarea class="upload-form-description" name="upload-description" placeholder="Ваш комментарий..." required minlength="30" maxlength="100"></textarea>
 
       <button class="upload-form-cancel" type="reset" id="upload-cancel" tabindex="0"></button>
-      <button class="upload-form-submit" type="submit" id="upload-submit">Отправить</button>
+      <button class="upload-form-submit" type="submit" id="upload-submit" disabled>Отправить</button>
     </form>
   </div>
 
