--- a/index.html
+++ b/index.html
@@ -136,6 +136,9 @@
 <template id="error-message" style="display: none;">
   <div class="err-message"></div>
 </template>
+<script src="js/picture.js" type="text/javascript"></script>
+<script src="js/data.js" type="text/javascript"></script>
+
 <script src="js/pictures.js" type="text/javascript"></script>
 </body>
 </html>
