--- a/index.html
+++ b/index.html
@@ -136,9 +136,10 @@
 <template id="error-message" style="display: none;">
   <div class="err-message"></div>
 </template>
+<script src="js/form.js" type="text/javascript"></script>
 <script src="js/picture.js" type="text/javascript"></script>
 <script src="js/data.js" type="text/javascript"></script>
-
-<script src="js/pictures.js" type="text/javascript"></script>
+<script src="js/gallery.js" type="text/javascript"></script>
+<script src="js/preview.js" type="text/javascript"></script>
 </body>
 </html>
