--- a/index.html
+++ b/index.html
@@ -136,7 +136,10 @@
 <template id="error-message" style="display: none;">
   <div class="err-message"></div>
 </template>
+<script src="js/error-handler.js" type="text/javascript"></script>
 <script src="js/form.js" type="text/javascript"></script>
+<script src="js/initialize-scale.js" type="text/javascript"></script>
+<script src="js/initialize-filters.js" type="text/javascript"></script>
 <script src="js/picture.js" type="text/javascript"></script>
 <script src="js/data.js" type="text/javascript"></script>
 <script src="js/gallery.js" type="text/javascript"></script>
