--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 <script src="js/initialize-scale.js" type="text/javascript"></script>
 <script src="js/initialize-filters.js" type="text/javascript"></script>
 <script src="js/picture.js" type="text/javascript"></script>
-<script src="js/data.js" type="text/javascript"></script>
+<script src="js/load.js" type="text/javascript"></script>
 <script src="js/gallery.js" type="text/javascript"></script>
 <script src="js/preview.js" type="text/javascript"></script>
 </body>
