--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Кекстаграм</title>
 </head>
 <body>
-
+<div class="errors"></div>
 <form class="filters hidden" action="index.html" method="get" autocomplete="off">
   <input type="radio" id="filter-popular" class="filters-radio" name="filter" value="popular" checked>
   <label for="filter-popular" class="filters-item">Популярные</label>
