--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
 <script src="js/picture.js" type="text/javascript"></script>
 <script src="js/load.js" type="text/javascript"></script>
 <script src="js/gallery.js" type="text/javascript"></script>
+<script src="js/filter-photo.js" type="text/javascript"></script>
 <script src="js/preview.js" type="text/javascript"></script>
 </body>
 </html>
