Добавлен debounce на 200ms

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
 <template id="error-message" style="display: none;">
   <div class="err-message"></div>
 </template>
+<script src="js/debounce.js" type="text/javascript"></script>
 <script src="js/error-handler.js" type="text/javascript"></script>
 <script src="js/form.js" type="text/javascript"></script>
 <script src="js/initialize-scale.js" type="text/javascript"></script>
