--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 <template id="error-message" style="display: none;">
   <div class="err-message"></div>
 </template>
-<script src="js/debounce.js" type="text/javascript"></script>
+<!--<script src="js/debounce.js" type="text/javascript"></script>
 <script src="js/error-handler.js" type="text/javascript"></script>
 <script src="js/form.js" type="text/javascript"></script>
 <script src="js/initialize-scale.js" type="text/javascript"></script>
@@ -145,6 +145,7 @@
 <script src="js/load.js" type="text/javascript"></script>
 <script src="js/gallery.js" type="text/javascript"></script>
 <script src="js/filter-photo.js" type="text/javascript"></script>
-<script src="js/preview.js" type="text/javascript"></script>
+<script src="js/preview.js" type="text/javascript"></script>-->
+<script type="text/javascript" src="main.js" charset="utf-8"></script>
 </body>
 </html>
